<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/techfix_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/welcome_back"
            android:textColor="@color/techfix_white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="35dp"
            android:text="@string/login_subtitle"
            android:textColor="@color/techfix_text_secondary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/techfix_surface"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="yes"
            android:autofillHints="emailAddress"
            android:padding="15dp"
            android:textColor="@color/techfix_white"
            android:textColorHint="@color/techfix_text_secondary" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@color/techfix_surface"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="yes"
            android:autofillHints="password"
            android:padding="15dp"
            android:textColor="@color/techfix_white"
            android:textColorHint="@color/techfix_text_secondary" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/techfix_gold"
            android:text="@string/login"
            android:textColor="@color/techfix_white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/create_account_prompt"
            android:textColor="@color/techfix_gold_light"
            android:textSize="15sp" />

    </LinearLayout>

</ScrollView>